Removed min-width:100vw from header, body and book card to fix problem showing horizontal scrollbar.

--- a/style.css
+++ b/style.css
@@ -25,14 +25,16 @@
 }
 
 html {
-    height: 100%;
+    margin: 0 auto;
+    min-height: 100%;
     font-size: 63%;
-    max-width: 100%;
 }
 
 body {
-    min-height: 100vh; 
+    min-height: 100vh;
+    min-width: fit-content; 
     width: auto;
+    max-width: 100%;
     background-color: var(--light-gray);
 }
 
@@ -43,7 +45,7 @@ body {
     align-items: center;
     margin: auto;
     height: 20px;
-    min-width: 100vw;
+    width: auto;
     background-color: var(--dark-blue-100);
     box-shadow: 0 0 10px var(--blue);
 }
@@ -166,6 +168,7 @@ form button[type=submit]:active {
 
 /*          --- header ---          */
 header {
+    width: 100%;
     display: flex;
     justify-content: center;
     align-content: center;
@@ -175,7 +178,6 @@ header {
     color: var(--light-gray);
     font-weight: 900;
     min-height: 20vh;
-    min-width: 100vw;
     margin: auto;
     background-color: var(--dark-blue);
 }
@@ -183,16 +185,16 @@ header {
 
 /*          --- book-card ---           */
 .bookCard-container {
-    margin-top: 30px;
-    min-width: 100vw;
+    width: 100%;
+    max-width: 100%;
+    margin: 30px 0 0 0;
     height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
-    align-content: space-between;
+    align-content: space-around;
     flex-flow: row wrap;
     background-color: hsla(0, 0%, 0%, 0.061);
-    contain: content;
 }
 
 .bookCard-container .book-card {
@@ -208,7 +210,6 @@ header {
     margin: 10px;
     border-radius: 5px 15px 15px 5px;
     box-shadow: 0 0 5px var(--dark-green);
-    border: 3px solid var(--dark-gray);
     contain: content;
 }
 
